--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* not classes */
+/* for everything */
 
 body {
     margin: 0;
@@ -38,8 +38,8 @@ a {
     top: 0;
     width: 100%;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     height: 40px;
     background-color: #00274D;
     padding: 10px 0px;
@@ -51,8 +51,6 @@ a {
 
 nav{
     display: flex;
-    flex: 1;
-    padding-left: 270px;
     gap: 30px;
     justify-content: center;
     align-items: center;
@@ -63,41 +61,8 @@ nav{
     font-size: 1.7rem;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
-    padding-left: 15px;
+    padding: 15px;
   }
-
-.search-bar {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    margin-right: 15px;
-}
-
-.search-bar input {
-    border: 1px solid #00509E;
-    border-radius: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    height: 30px;
-}
-
-.search-bar button {
-    background-color: #00509E;
-    border: 1px solid #00509E;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 30px;
-    font-size: 14px;
-    height: 30px;
-}
-
-.right-section {
-  display: flex;
-  align-items: center;
-  gap: 0px;
-}
 
 .image-container {
   position: relative;
@@ -121,6 +86,7 @@ nav{
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  line-height: 2.0;
   flex-direction: column;
   background-color: rgba(0,0,0, 0.7);
   color: white;
@@ -152,7 +118,26 @@ nav{
   color: white;
 }
 
-.scroll-section {
+.inverse-shop-button{
+  background-color: #00274D;
+  color: #ffffff;
+  border: none;
+  padding: 12px 30px;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 30px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+
+.inverse-shop-button:hover {
+  background-color: #ffffff;
+  outline-style:solid;
+  outline-color: #00274D;
+  color: #00274D;
+}
+
+.padding-section {
   padding: 20px;
 }
 
@@ -169,7 +154,6 @@ nav{
   font-weight: bold;
   color:#00274D;
 }
-
 
 .scroll-container {
   display: flex;
@@ -191,6 +175,7 @@ nav{
   flex: 0 0 300px;
   height: 300px;
   margin-top: 10px;
+  margin-left: 10px;
   background-color: #ddd;
   border-radius: 10px;
   display: flex;
@@ -217,6 +202,7 @@ nav{
   flex: 2;
   background-color: #00274D;
   padding: 20px;
+  line-height: 2.0;
   color: #ffffff;
   font-size: 1rem;
 }
@@ -270,3 +256,90 @@ img {
   object-fit: cover;
 }
 
+.scroll-by-sports {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: first baseline;
+  align-items: flex-start;
+  text-align: center;
+  padding: 10px;
+  background-color: #ddd;
+  border-radius: 10px;
+}
+
+.scroll-by-sports img {
+  border-radius: 10px;
+}
+
+.scroll-by-sports-button {
+  background-color: #ffffff;
+  color: #00509E;
+  border: none;
+  padding: 8px 30px;
+  font-size: 1rem;
+  font-weight:bold;
+  border-radius: 20px;
+  margin-top: 10px;
+  transition-duration: 0.4s;
+}
+
+.scroll-by-sports-button:hover {
+  background-color: #c8c8c8;
+}
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.slideshow-text {
+  color: #f2f2f2;
+  font-size: 30px;
+  font-weight: bold;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.4s;
+}
+
+.active {
+  background-color: #717171;
+  transform: scale(1.20);
+}
+
+.product-breakdown {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.product-breakdown h3 {
+  font-weight: 600;
+  color: #00274D;
+}
+
+.product-breakdown h2{
+  font-weight: 800;
+  color: #00274D;
+}
+
+.product-breakdown h4{
+  font-weight: 300;
+  color:#00274D;
+  max-width: 800px;
+  text-align: center;
+}
