--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ a {
     color: white;
   }
   
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
   /* cross-x banner */
 .banner {
     display: flex;
@@ -189,10 +194,27 @@ nav{
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
+  cursor: pointer;
 }
 
 .rounded-item:hover {
   transform: scale(1.05);
+}
+
+.rounded-item img {
+  width: 80%;
+  height: auto;
+}
+
+.rounded-item h3 {
+  margin: 10px 0;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.rounded-item p {
+  margin: 5px 0;
+  color: #555;
 }
 
 .product-section {
@@ -251,12 +273,6 @@ nav{
   text-align: center;
   font-size: 0.9rem;
   color: #333;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .scroll-by-sports {
@@ -351,6 +367,25 @@ img {
 }
 
 /* Shoes Page */
+.filters {
+  position: fixed;
+  top: 160px;
+  left: 15px;
+  padding: 20px;
+  margin-left: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  max-height: 90vh;
+  overflow-y: auto;
+  width: 200px;
+}
+
+.filters h3 {
+  font-size: 1.2em;
+  font-weight: 700;
+  color: #00274D;
+}
 .dropdown {
   position: relative;
   margin-bottom: 15px;
@@ -359,11 +394,13 @@ img {
 .dropdown-content {
   display: none;
   position: relative;
-  background-color: #f1f1f1;
-  width: 100%;
-  border: 1px solid #ccc;
+  background-color: #ffffff;
+  color:#00274D;
+  left: 30px;
+  width: 50%;
   border-radius: 5px;
-  margin-top: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   padding: 10px;
   gap: 20px;
 }
@@ -383,6 +420,7 @@ img {
   color: white;
   padding: 10px;
   font-size: 14px;
+  font-weight: 600;
   border: none;
   width: 100%;
   text-align: left;
@@ -394,24 +432,6 @@ img {
   transform: scale(1.05);
 }
 
-.filters {
-  position: fixed;
-  top: 150px;
-  left: 15px;
-  padding: 20px;
-  margin-left: 30px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  max-height: 90vh;
-  overflow-y: auto;
-  width: 200px;
-}
-
-.filters h3 {
-  font-size: 1.2em;
-  color: #00274D;
-}
 .submit-btn {
   background-color: #00509E;
   color: white;
@@ -420,6 +440,7 @@ img {
   border-radius: 5px;
   cursor: pointer;
   width: 100%;
+  font-weight: bold;
 }
 
 .submit-btn:hover {
@@ -431,5 +452,17 @@ img {
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
-  justify-content: center;
+  justify-content: start;
+  padding:10px;
+}
+
+.shoes-container {
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+  margin-left: 320px;
+  max-width: 1000px;
+  flex: 1;
 }
