--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,6 @@ a {
     text-decoration: none;
     color: white;
   }
-  
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
   /* cross-x banner */
 .banner {
     display: flex;
@@ -70,6 +64,7 @@ nav{
   }
 
   /* Homepage  */
+ /*  */
 .image-container {
   position: relative;
   display: flex;
@@ -83,8 +78,8 @@ nav{
 }
 
 .bg-image {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -195,6 +190,7 @@ nav{
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
   cursor: pointer;
+  color:#00274D;
 }
 
 .rounded-item:hover {
@@ -202,8 +198,8 @@ nav{
 }
 
 .rounded-item img {
-  width: 80%;
-  height: auto;
+  width: 300px;
+  height: 300px;
 }
 
 .rounded-item h3 {
