--- a/docs/style.css
+++ b/docs/style.css
@@ -198,19 +198,11 @@ nav{
 }
 
 .rounded-item img {
-  width: 300px;
-  height: 300px;
-}
-
-.rounded-item h3 {
-  margin: 10px 0;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.rounded-item p {
-  margin: 5px 0;
-  color: #555;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .product-section {
@@ -444,15 +436,57 @@ nav{
   transform: scale(1.05);
 }
 
-.shoes {
+.rounded-item-displayshoes {
+  flex-direction: column;
+  width : 300px;
+  height: 500px;
+  margin-top: 10px;
+  margin-left: 10px;
+  background-color: #ddd;
+  border-radius: 10px;
   display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-  justify-content: start;
-  padding:10px;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  cursor: pointer;
+  color:#00274D;
+  overflow: hidden;
+}
+
+.rounded-item-displayshoes:hover {
+  transform: scale(1.05);
+}
+
+.rounded-item-displayshoes img {
+  border-radius: 10px;
+  position: relative;
+  width: 90%;
+  height: 50%;
+
+}
+
+.rounded-item-displayshoes h3 {
+  margin: 10px 0;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.rounded-item-displayshoes p {
+  margin: 5px 0;
+  color: #555;
 }
 
 .shoes-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: flex-start;
+  align-items: flex-start;
   padding: 20px;
   background-color: #ffffff;
   border-radius: 10px;
@@ -461,4 +495,5 @@ nav{
   margin-left: 320px;
   max-width: 1000px;
   flex: 1;
+  color:#00274D;
 }
